# pyvideotrans

./: .env  ALGORITHM_IMPROVEMENT.md  CACHE_IMPLEMENTATION_SUMMARY.md  LLM_SPLIT_IMPROVEMENTS.md  MPS支持说明.md  PROGRESS_FEEDBACK_FIX.md  QUICK_START.md  QUICK_TEST_GUIDE.md  SUBTITLE_PREVIEW_UPDATE.md  WHISPER_CHECKER_OPTIMIZATION.md  WHISPER_CHECKER_QUICKSTART.md  WHISPER_ERROR_CHECKER_README.md  analyze_dependencies.py  check_whisper_timestamp.sh  clean_project.py  llm_split.py  main.py  process_and_render.sh  regenerate_subtitles.py  regenerate_subtitles_smart.py  requirements.txt  run_whisper_error_checker.bat  run_whisper_error_checker.sh  setup_subtitle_integration.sh  smart_split.py  sp_vas.py  split_subtitles.py  test_fps_detection.py  test_split_gui.py  test_whisper_cache.py  whisper_checker_prompts.json  whisper_error_checker.py  whisper_timestamp_checker.py  修复完成说明.md  功能演示_使用说明.md  双语字幕GUI配置_使用指南.md  双语字幕功能更新_说明.md  字幕渲染优化_说明.md  字幕生成功能使用指南.md  字幕预览功能_README.md  (+9 more)
docs/: AUTO_SCROLL_LOG_UPDATE.md  CACHE_QUICK_START.md  (+40 more)
get_srt_zimu/: AUTO_JUMP_TO_LLM_SPLIT.md  AUTO_SPLIT_WORKFLOW.md  BEFORE_AFTER_COMPARISON.md  BIOTERRORISM_FIX_SUMMARY.md  CACHE_FIX.md  CACHE_TOGGLE_FEATURE.md  DEBUG_TIMESTAMP_ISSUE.md  DEMO_USAGE.md  FASTER_WHISPER_MIGRATION.md  IMPLEMENTATION_COMPLETE.md  INSTALL_FASTER_WHISPER.md  LLM_SPLIT_ISSUE_AND_SOLUTION.md  LLM_SPLIT_QUICK_START.md  LLM_SPLIT_STANDALONE_IMPLEMENTATION.md  LLM_SPLIT_STRICT_IMPLEMENTATION.md  LLM功能迁移完成说明.md  LLM智能分割使用说明.md  MATCHING_DIAGNOSIS.md  MISSING_SUBTITLES_FIX.md  README.md  README_LLM_MIGRATION.md  SMART_MATCHING_UPGRADE.md  TIMESTAMP_INTERPOLATION_FIX.md  WHISPER_MIGRATION_OPENAI.md  check_whisper_cache.py  llm_split.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_llm_split.bat  run_llm_split.sh  setup.py  test_faster_whisper_upgrade.py  test_llm_migration.py  test_timestamp_accuracy.py  verify_strict_implementation.py  功能说明.md  启动.sh  (+2 more)
get_srt_zimu/resource/: llm_output.txt
get_srt_zimu/ui/: __init__.py  home_view.py  main_window.py  process_view.py  render_view.py  split_view.py  split_view_new.py
get_srt_zimu/utils/: fcpxml_generator.py  llm_processor.py  llm_processor_enhanced.py  model_downloader.py  model_loader.py  paths.py  srt_utils.py  whisper_processor.py
(+28 files in other folders)
