[project]
name = "whisper-auto-captions"
version = "1.0.0"
description = "Auto Captions for Final Cut Pro Powered by OpenAI's Whisper Model"
# readme = "README_PYTHON.md"  # Commented out - file not needed for local use
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Whisper Auto Captions Team"}
]
keywords = ["whisper", "subtitle", "caption", "final-cut-pro", "video", "audio", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide6>=6.6.0",
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
whisper-captions = "main:main"

[project.urls]
Homepage = "https://github.com/shaishaicookie/fcpx-auto-captions"
Repository = "https://github.com/shaishaicookie/fcpx-auto-captions"
Issues = "https://github.com/shaishaicookie/fcpx-auto-captions/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ui", "utils"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

